--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,8 +13,6 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -23,6 +21,7 @@ body {
   max-width: 1440px;
   min-width: 330px;
   width: 100%;
+  padding: 1.5rem;
 }
 
 /*--------Fonts Mobile-----------*/
