--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,8 +13,8 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
@@ -42,20 +42,20 @@ h2 {
   line-height: 1.875rem;
 }
 
-.p-text {
+.pText {
   font-family: var(--fontNoto);
   font-weight: 400;
   font-size: 1.125rem;
   line-height: 1.5rem;
 }
-.p-title {
+.pTitle {
   font-family: var(--fontNoto);
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.375rem;
 }
 
-.p-italic {
+.pItalic {
   font-family: var(--fontNoto);
   font-style: italic;
   font-weight: 400;
@@ -63,7 +63,7 @@ h2 {
   line-height: 1.375rem;
 }
 
-.p-buttons {
+.pButtons {
   font-family: var(--fontNoto);
   font-weight: 700;
   font-size: 0.875rem;
@@ -88,20 +88,20 @@ h2 {
     line-height: 3rem;
   }
 
-  .p-text {
+  .pText {
     font-family: var(--fontNoto);
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-  .p-title {
+  .pTitle {
     font-family: var(--fontNoto);
     font-weight: 700;
     font-size: 1.5rem;
     line-height: 2rem;
   }
 
-  .p-italic {
+  .pItalic {
     font-family: var(--fontNoto);
     font-weight: 400;
     font-style: italic;
@@ -109,7 +109,7 @@ h2 {
     line-height: 1.75rem;
   }
 
-  .p-buttons {
+  .pButtons {
     font-family: var(--fontNoto);
     font-weight: 700;
     font-size: 1.125rem;
