--- a/frontend/src/components/Recommended.module.css
+++ b/frontend/src/components/Recommended.module.css
@@ -14,6 +14,7 @@
 
 .imgContainer {
   position: relative;
+  margin-bottom: 1rem;
 }
 
 .quotation {
@@ -38,16 +39,18 @@ img {
 .pText {
   color: var(--colorWhiteFonts);
   text-align: center;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
 
 h2 {
   color: var(--colorWhiteFonts);
+  margin-bottom: 1.75rem;
 }
 
 .pTextName {
   color: var(--colorWhiteFonts);
   font-weight: 700;
+  margin-bottom: 2rem;
 }
 
 .btn {
