--- a/frontend/src/components/Recommended.module.css
+++ b/frontend/src/components/Recommended.module.css
@@ -50,7 +50,6 @@ h2 {
 .pTextName {
   color: var(--colorWhiteFonts);
   font-weight: 700;
-  margin-bottom: 1.5rem;
 }
 
 .btn {
@@ -61,6 +60,16 @@ h2 {
   border-radius: 20px;
   cursor: pointer;
   box-shadow: 0px, 4px rgba(0, 0, 0, 0.25);
-  margin-top: 1rem;
+  margin-top: 2.5rem;
   margin-bottom: 2rem;
+}
+
+audio {
+  height: 40px;
+  margin-top: 3rem;
+  margin-bottom: 0.5rem;
+}
+
+.pItalic {
+  color: var(--colorWhiteFonts);
 }
