--- a/frontend/src/components/Recommended.module.css
+++ b/frontend/src/components/Recommended.module.css
@@ -27,7 +27,7 @@
   font-weight: 700;
 }
 
-img {
+.imgQuote {
   border-radius: 50%;
   aspect-ratio: 1/1;
   object-fit: cover;
@@ -72,4 +72,11 @@ audio {
 
 .pItalic {
   color: var(--colorWhiteFonts);
+}
+
+.logo {
+  width: 80px;
+  height: 25px;
+  object-fit: contain;
+  margin-top: 0.25rem;
 }
