--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -41,3 +41,67 @@ margin-right:2.75rem;
   line-height: 1.5rem;
 
 }
+
+
+@media screen and (min-width: 600px) {
+  .headerFirsttext{
+    color: white;
+    text-align: center;
+    margin-left: 2.75rem;
+    margin-bottom: 3.125rem;
+    margin-right:2.75rem; 
+    font-size: 1.75rem;
+    line-height: 2.5rem;
+    
+  
+    }
+    
+    .headerSecondtext{
+      margin-left: 2.75rem;
+      margin-right:2.75rem; 
+      color: white;
+      text-align: center;
+      margin-bottom: 31.25rem;
+      font-size: 1.25rem;
+      line-height: 2rem;
+  
+    }
+  }
+
+
+
+
+@media screen and (min-width: 1000px) {
+  .header {
+  height: 54.68rem;
+  }
+
+  .headerFirsttext{
+    margin-top: 5rem;
+    color: white;
+    margin-left: 3.5rem;
+    margin-right: 10rem;
+    margin-bottom: 3.125rem;
+    text-align:left;
+    width:55%;
+    font-size: 2.75rem;
+    line-height: 4.125rem;
+    }
+
+    .headerSecondtext{
+      margin-left: 2.75rem;
+      color: white;
+      margin-right: 20rem;
+      margin-bottom: 31.25rem;
+      text-align:left;
+      font-size: 2rem;
+      line-height: 3rem;
+      width:55%;
+    }
+  
+    .image2 {
+      height:10.75rem;
+      width:10rem;
+    }
+
+}
