Correction App.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,120 @@
-body {
+:root {
+  --colorDarkBG: #302518;
+  --colorBlackFonts: #131315;
+  --colorWhiteFonts: #f5f5f5;
+  --colorGray: #f6f6f6;
+  --colorLightblue: #4faeff;
+  --gradientBG: linear-gradient(270.64deg, #7755f9 -22.24%, #5f3971 109.3%);
+  --gradientButtons: linear-gradient(269.49deg, #7755f9 10.41%, #02aafd 111.89%),
+    linear-gradient(270.52deg, #db6c2f -10.09%, #7755f9 90.46%);
+  --fontPoppins: "Poppins", sans-serif;
+  --fontNoto: "Noto Sans", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0 auto;
+  max-width: 1440px;
+  min-width: 330px;
+  width: 100%;
+}
+
+/*--------Fonts Mobile-----------*/
+
+h1 {
+  color: var(--white);
+  font-family: var(--fontPoppins);
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2.125rem;
+}
+
+h2 {
+  font-family: var(--fontPoppins);
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+}
+
+.pText {
+  font-family: var(--fontNoto);
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
+.pTitle {
+ font-family: var(--fontPoppins);
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.375rem;
+}
+
+.pItalic {
+  font-family: var(--fontNoto);
+  font-style: italic;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.375rem;
+}
+
+.pButtons {
+  font-family: var(--fontNoto);
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+}
+
+/*--------Fonts Tablet/Desktop-----------*/
+
+@media screen and (min-width: 600px) {
+  h1 {
+    color: var(--white);
+    font-family: var(--fontPoppins);
+    font-weight: 700;
+    font-size: 2.75rem;
+    line-height: 4.125rem;
+  }
+
+  h2 {
+    font-family: var(--fontPoppins);
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+
+  .pText {
+    font-family: var(--fontNoto);
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+  .pTitle {
+    font-family: var(--fontNoto);
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .pItalic {
+    font-family: var(--fontNoto);
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .pButtons {
+    font-family: var(--fontNoto);
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+  }
 }
 
 
