--- a/frontend/src/components/Aboutus.module.css
+++ b/frontend/src/components/Aboutus.module.css
@@ -1,23 +1,37 @@
 .aboutus {
-    background-color: #302518;
-    height:35.625rem;
-    color:white;
-    text-align: center;
-  }
+  background-color: #302518;
+  height:auto;
+  color:white;
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+  padding-bottom: 1rem;
+ 
+}
+
+.aboutustitle {
+  color: white;
+  text-align: center;
+  margin-bottom: 1.25rem;
+  padding-top: 1rem;
+}
+
+.aboutustext {
+  color: white;
+  text-align: center;
   
-  .aboutustitle {
-    font-size:1.25rem;
-    color: white;
-    text-align: center;
-    font-weight: 700;
-    margin-bottom: 1.25rem;
-    padding-top: 3.125rem;
-  }
+ 
+ 
   
-  .aboutustext {
-    font-size:1.125rem;
-    color: white;
-    text-align: center;
-    margin-left: 2.75rem;
-    margin-right: 2.75rem;
-  }
+}
+
+.logo {
+ 
+  margin-top:1rem;
+  width:7.125rem;
+  height:7.125rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: fill;
+
+}
