--- a/frontend/src/components/Aboutus.module.css
+++ b/frontend/src/components/Aboutus.module.css
@@ -35,3 +35,89 @@
   object-fit: fill;
 
 }
+
+@media screen and (max-width: 420px) {
+
+
+  .aboutus {
+    background-color: #302518;
+    height:auto;
+    color:white;
+    padding-bottom: 2rem;
+    
+
+  }
+
+
+  .aboutustext {
+    color: white;
+    text-align: center;
+    
+   
+
+  
+  }
+
+
+  .logo {
+    margin-bottom:1rem;
+    margin-top:0.5rem;
+    width:6.125rem;
+    height:6.125rem;
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    }
+  }
+
+@media screen and (min-width: 1000px) {
+
+
+
+  .aboutus {
+    background-color: #302518;
+    height:400px;
+    color:white;
+    text-align: center;
+    padding-bottom: 3rem;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0rem;
+  padding-right: 0rem;
+
+  }
+
+  .logo {
+    width: 250px;
+    height: 239px;
+    margin-bottom:0rem;
+    margin-top:7rem;
+    margin-right: 1rem;
+    
+
+  }
+  .aboutustitle {
+    color: white;
+    text-align: left;
+    margin-bottom: 1rem;
+    padding-top: 3.125rem;
+    margin-left: 2.75rem;
+    margin-right: 5rem;
+    max-width:62rem;
+  }
+  
+  .aboutustext {
+    color: white;
+    text-align: left;
+    margin-left: 2.75rem;
+    max-width:62rem;
+  
+  }
+
+  .container2{
+    width:300px;
+  }
+
+}
