added styling for transition btw mobile & tablet

--- a/frontend/src/components/Recommended.module.css
+++ b/frontend/src/components/Recommended.module.css
@@ -121,11 +121,14 @@ audio {
   display: none;
 }
 
-/*--------Padding Tablet-----------*/
+/*--------Transitionary Styling Mobile-> Tablet/Dekstop-----------*/
 
 @media screen and (min-width: 500px) {
   .rec {
     padding: 0 3rem;
+  }
+  .nameMobile {
+    font-size: 1.125rem;
   }
 }
 
