--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -19,6 +19,7 @@ a:link {
 
 .albumCover {
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    width: 230px;
     margin: 1rem auto;
     display: block;
     margin: 1rem auto; 
@@ -65,23 +66,9 @@ a:link {
     margin: 2rem auto auto auto;
 }
 
-.listenMore p {
-    margin-left: auto;
-}
-
-.listenMore a {
-    margin-right: auto;
-}
-
-.listen {
-    margin: 0 auto; 
-    display: flex;
-    align-items: center;
-}
-
 .endTxt {
     display: block;
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     /* text-align: center; */
 }
 
