--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -13,6 +13,8 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -62,14 +64,54 @@ h2 {
 }
 
 .pButtons {
-  font-family: var(--fontNoto);
-  font-weight: 700;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
+  align-items: center;
+  appearance: none;
+  background: linear-gradient(269.49deg, #7755f9 10.41%, #02aafd 111.89%),
+    linear-gradient(270.52deg, #db6c2f -10.09%, #7755f9 90.46%);
+  border: 0;
+  border-radius: 1.25rem;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  height: 2.625rem;
+  width: 6.688rem;
+  justify-content: center;
+  overflow: hidden;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  position: relative;
+  text-align: left;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  margin: auto;
+  margin-bottom: 2rem;
+}
+
+.pButtons:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.pButtons:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.pButtons:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
 /*--------CSS for Genres Pages-----------*/
-.logo-buttonBack {
+.logoButtonBack {
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
@@ -81,66 +123,107 @@ h2 {
   grid-column-start: 1;
 }
 
-.button-back {
+.rockImg {
+  display: none;
+}
+
+.buttonBack {
   grid-column-start: 2;
 }
 
-.genre-text {
+.genreText {
   display: flex;
   flex-direction: column;
 }
 
-.genre-text h1,
-.genre-text p {
+.genreText h1,
+.genreText p {
   color: #f5f5f5;
 }
 
-.genre-text p {
+.genreText p {
   white-space: wrap;
   max-width: 35ch;
   font-size: 18px;
 }
 
-.header-genres {
+.headerGenres {
   background: linear-gradient(270.64deg, #7755f9 -22.24%, #5f3971 109.3%);
   padding-right: 1.5rem;
   padding-left: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.most-popular {
+.genreTextAndImg {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.mostPopular {
   background: #f6f6f6;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
+  padding-top: 1.5rem;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   color: #131315;
 }
 
-.most-popular-songs {
+.mostPopularSongsContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #ffffff;
   border-radius: 15px;
   margin-top: 1rem;
-  margin-bottom: 1rem;
   padding: 1rem;
-  width: 100%;
+  gap: 1rem;
 }
 
-.spotify-icon {
+.mostPopularSongsCoverSong {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+#popularCoverAndPopularText {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.playButton {
+  align-self: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transition: 0.3s;
+  padding: 30px;
+  cursor: pointer;
+  background-image: url("./src/assets/musiQue-imgs/playButton.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+}
+
+.playButton:hover {
+  opacity: 1;
+}
+
+.spotifyIconLittle {
   align-self: flex-end;
 }
 
 .shuffle {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background: linear-gradient(269.49deg, #7755f9 10.41%, #02aafd 111.89%),
-    linear-gradient(270.52deg, #db6c2f -10.09%, #7755f9 90.46%);
-  border-radius: 20px;
-  color: #f5f5f5;
-  align-self: center;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: rem;
+  width: 8rem;
 }
 
 .trending {
@@ -148,19 +231,26 @@ h2 {
   color: #f5f5f5;
   padding: 1.5rem;
 }
-.trending-artists-div {
-display: flex;
-gap: 0.5rem;
+
+.trendingArtistsContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
 
-.trending-artists-div-artist {
-text-align: center;
-display: flex;
-flex-direction: column;
-justify-content: center;
+#trendingImg {
+  width: 50%;
 }
 
-.trending-artists-div-artist img {
+.trendingArtistsDiv {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.trendingArtistsDiv .spotifyIcon {
   align-self: center;
 }
 
@@ -221,4 +311,46 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     font-size: 1.125rem;
     line-height: 1.5rem;
   }
+
+  /*--------CSS for Genres Pages-----------*/
+
+  .mostPopular {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .genreTextAndImg {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .genreText p {
+    max-width: 65ch;
+  }
+
+  .trending {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  #popularCoverAndPopularText {
+    gap: 5rem;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .mostPopularSongsContainer {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .rockImg {
+    display: contents;
+    height: 100%;
+  }
+
+  .spotifyIconLittle {
+    display: none;
+  }
+
 }
