--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -123,12 +123,30 @@ h2 {
   grid-column-start: 1;
 }
 
+.genreText p {
+  padding: 0;
+}
+
 .rockImg {
   display: none;
 }
 
+.rockImg img {
+  width: 20rem;
+}
+
 .buttonBack {
   grid-column-start: 2;
+}
+
+.buttonBackDiv {
+  opacity: 0.6;
+  transition: all ease 0.3s;
+}
+
+.buttonBackDiv:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 .genreText {
@@ -179,7 +197,6 @@ h2 {
   border-radius: 15px;
   margin-top: 1rem;
   padding: 1rem;
-  gap: 1rem;
 }
 
 .mostPopularSongsCoverSong {
@@ -192,6 +209,15 @@ h2 {
   display: flex;
   gap: 1rem;
   align-items: center;
+}
+
+.mostPopularSongsText {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.mostPopularSongsText p {
+  padding: 0;
 }
 
 .playButton {
@@ -343,14 +369,19 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
     width: 100%;
   }
 }
+
 @media screen and (min-width: 800px) {
   .rockImg {
     display: contents;
-    height: 100%;
   }
 
   .spotifyIconLittle {
     display: none;
   }
+}
 
+@media screen and (min-width: 1000px) {
+  .rockImg img {
+    width: 30rem;
+  }
 }
