--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -26,7 +26,7 @@ a:link {
 
 .musicDiscover {
     padding-top: 2rem;
-    padding-left: 10%;
+    text-align: center;
 }
 
 .mainImg {
@@ -98,6 +98,11 @@ a:link {
 }
 
 @media screen and (min-width: 600px)  {
+    .musicDiscover {
+        text-align: initial;
+        padding-left: 12%;
+    }
+
     .panelContainer {
         display: flex;
         padding: 0 auto;
@@ -115,6 +120,7 @@ a:link {
 }
 
 @media screen and (min-width: 900px) {
+
     .pane1 {
         margin-right: initial;
     }
