Added 3 panel datas in 2 objects, with randomized contents.

--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -18,6 +18,12 @@ a:link {
     margin: 0 auto;
 }
 
+.panel1,
+.panel2, 
+.panel3 {
+    max-width: 330px;
+}
+
 .panel2,
 .panel3 {
     display: none;
