--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -22,6 +22,11 @@ a:link {
 .panel2, 
 .panel3 {
     max-width: 330px;
+    margin: 0;
+}
+
+.panel1 {
+    margin: 0 auto;
 }
 
 .panel2,
@@ -114,31 +119,20 @@ a:link {
         padding: 0 auto;
     }
 
-    .panel1 {
-        margin-left: auto;
-        /* margin-right: 5%; */
-    }
     .panel2 {
         display: inline;
-        margin-left: 10%;
-        margin-right: auto;
+        margin: 0 auto;
     }
 }
 
 @media screen and (min-width: 900px) {
-
-    .pane1 {
-        margin-right: initial;
-    }
-    
-    .panel2 {
-        /* margin: 0 7vw; */
-        margin-left: initial;
-        margin: 0 auto;
-    }
-
     .panel3 {
         display: inline;
-        margin-right: auto;
+    }
+
+    .panel1,
+    .panel2,
+    .panel3 {
+        margin: 0 auto;
     }
 }
