--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -57,6 +57,7 @@ a:link {
 .format,
 .release {
     text-align: center;
+    font-weight: 500;
 }
 
 .release,
@@ -77,9 +78,7 @@ a:link {
     width: 120px;
     height: 40px;
     margin: 1rem auto;
-    
-    margin-top: 2rem;
-    /* margin-top: 2rem; */
+    margin-top: 3rem;
     background: linear-gradient(269.49deg, #7755F9 10.41%, #02AAFD 111.89%), linear-gradient(270.52deg, #DB6C2F -10.09%, #7755F9 90.46%);
     border-radius: 20px;
     position: relative;    
@@ -136,3 +135,42 @@ a:link {
         margin: 0 auto;
     }
 }
+
+.pButtons {
+    align-items: center;
+    background: linear-gradient(269.49deg, #7755F9 10.41%, #02AAFD 111.89%), linear-gradient(270.52deg, #DB6C2F -10.09%, #7755F9 90.46%);
+    border: 0;
+    border-radius: 1.25rem;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    color: #fff;
+    cursor: pointer;
+    height: 2.625rem;
+    width: 6.688rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: box-shadow,transform;
+    margin:auto;
+}
+
+.pButtons:focus {
+    box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.pButtons:hover {
+    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+
+  .pButtons:active {
+    box-shadow: #3c4fe0 0 3px 7px inset;
+    transform: translateY(2px);
+  }
+
+  .btnContainer {
+    display: flex;
+    margin-top: 1rem;
+  }
