--- a/frontend/src/components/trendingArtists.module.css
+++ b/frontend/src/components/trendingArtists.module.css
@@ -1,7 +1,3 @@
-body {
-    padding: 0;
-}
-
 .artistsCard img {
     width: 100%;
     object-fit: contain;
@@ -34,7 +30,7 @@ body {
     box-shadow: rgb(17 17 26 / 20%) 0px 4px 16px, rgb(17 17 26 / 20%) 0px 8px 24px, rgb(17 17 26 / 20%) 0px 16px 56px;
 }
 
-  p {
+  .albumText p {
     margin: 0;
     padding-left: 1rem;
     padding-right: 1rem;
