--- a/frontend/src/components/trendingArtists.module.css
+++ b/frontend/src/components/trendingArtists.module.css
@@ -1,32 +1,38 @@
-.artistsCard img {
-    width: 100%;
-    object-fit: contain;
+.coversongContainer img {
+  width: 100%;
+  align-self: center;
   }
-  
+
   .trendingArtists {
     background-image: linear-gradient(#302518 0.48%, rgb(84 78 70 / 3%) 5.1%),url(src/assets/bg-trending-artists.png);
     background-size: cover;
   }
 
-  .trendingArtists h2 {
-    text-align: center;
-    padding-top: 3rem;
-    margin: 0;
-  }
-
 .artistsCard {
+    padding-top: 3rem;
+    display: flex;
     padding-left: 5rem;
     padding-right: 5rem;
-    padding-top: 2rem;
-    display: flex;
     flex-direction: column;
-    gap: 3rem;
+    align-items: center;
+    gap: 2rem;
+}
+
+.albumAndTextContainer {
+  display:flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .articles {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1.5rem;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
     background-color: #302518;
     color: #F5F5F5;
-    padding-bottom: 2rem;
     box-shadow: rgb(17 17 26 / 20%) 0px 4px 16px, rgb(17 17 26 / 20%) 0px 8px 24px, rgb(17 17 26 / 20%) 0px 16px 56px;
 }
 
@@ -36,19 +42,50 @@
     padding-right: 1rem;
   }
 
+  .albumText {
+    display:flex;
+    flex-direction: column;
+  }
+
+  .playButton {
+    align-self: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transition: 0.3s;
+    padding: 30px;
+    cursor: pointer;
+    background-image: url("./src/assets/musiQue-imgs/playButton.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.6;
+  }
+
+  .playButton:hover {
+    opacity: 1;
+  }
+
+  .coversongContainer {
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+  }
+
+  .spotifyIconLittle {
+    align-self: flex-end;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+  }
+
   @media screen and (min-width: 600px) {
 
    .trendingArtists {
      background: #F6F6F6;
      background-image: none;
-     padding-left: 2rem;
-     padding-right: 2rem;
-   }
-
-   .trendingArtists h2 {
-    text-align: left;
-    padding-bottom: 2rem;
-    padding-bottom: 2rem;
+     padding-left: 3rem;
+     padding-right: 3rem;
    }
 
    .articles {
@@ -60,19 +97,26 @@
     box-shadow: none;
    }
 
-   .artistsCard img {
-    width: 9rem;
+   .coversongContainer img {
+    width: 150px;
     overflow: hidden;
   }
 
   .artistsCard {
-    padding: 0;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-top: 1.5rem;
+    border-radius: 15px;
   }
 
   .albumText {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+
+  .spotifyIconLittle {
+    display: none;
   }
 
   }
