--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -256,6 +256,7 @@ h2 {
   background: #302518;
   color: #f5f5f5;
   padding: 1.5rem;
+  height: 900px;
 }
 
 .trendingArtistsContainer {
@@ -285,6 +286,16 @@ footer {
   padding: 1rem;
   position: sticky;
   top: 100vh;
+  background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2%, rgba(141, 138, 133, 0.322174) 59.48%, rgba(161, 159, 155, 0.237391) 100%, rgba(217, 217, 217, 0) 2.64%), url(src/assets/backgroundWall.png);
+}
+
+.footerimage {
+  width:7.75rem;
+  height:2.375rem;
+  margin-bottom: 0rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*
