--- a/frontend/src/pages/genres.module.css
+++ b/frontend/src/pages/genres.module.css
@@ -255,31 +255,23 @@ h2 {
 .trending {
   background: #302518;
   color: #f5f5f5;
-  padding: 1.5rem;
-  height: 900px;
+  height: auto;
+  padding-bottom: 2rem;
 }
 
 .trendingArtistsContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 #trendingImg {
-  width: 50%;
+  width: 100%;
+  -webkit-box-shadow: inset 0 0 10px 10px blue;  
+  -moz-box-shadow: inset 0 0 10px 10px blue;
+  box-shadow: inset 0 0 10px 10px blue;
 }
 
-.trendingArtistsDiv {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 
-.trendingArtistsDiv .spotifyIcon {
-  align-self: center;
-}
 
 footer {
   text-align: center;
@@ -296,6 +288,12 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.trending h1 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1.5rem;
 }
 
 /*
@@ -366,8 +364,8 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   }
 
   .trending {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 0rem;
+    padding-right:0rem;
   }
 
   #popularCoverAndPopularText {
@@ -389,6 +387,60 @@ background-image: linear-gradient(#302518 0.48%, rgba(84, 78, 70, 0.565217) 33.2
   .spotifyIconLittle {
     display: none;
   }
+
+  .trendingArtistsContainer {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .trendingArtistsDiv:nth-child(1) {
+   width:100%;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   grid-row-start: 1;
+   grid-row-end: 3;
+  }
+  .trendingArtistsDiv:nth-child(2) {
+    width:100%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .trendingArtistsDiv:nth-child(3) {
+    width:100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .trendingArtistsDiv:nth-child(4) {
+    width:100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .trendingArtistsDiv:nth-child(5) {
+    width:100%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .trendingArtistsDiv:nth-child(6) {
+    display: none;
+  }
+  .trendingArtistsDiv:nth-child(7) {
+    display: none;
+  }
+  .trendingArtistsDiv:nth-child(8) {
+    display: none;
+  }
+
+
 }
 
 @media screen and (min-width: 1000px) {
