--- a/frontend/src/components/WorldMusic.module.css
+++ b/frontend/src/components/WorldMusic.module.css
@@ -10,7 +10,6 @@ a:link {
     background: var(--gradientBG);
 }
 
-
 .panelContainer {
     display: block;
     max-width: 100%;
@@ -77,7 +76,7 @@ a:link {
     margin-top: 1rem;
 }
 
-.shuffle {
+.shufflebtn {
     width: 120px;
     height: 40px;
     margin: 1rem auto;
@@ -86,6 +85,7 @@ a:link {
     border-radius: 20px;
     position: relative;    
 }
+
 
 .endTxt {
     padding-bottom: 1.4rem;
@@ -118,6 +118,40 @@ a:link {
     margin-top: 2rem;
     margin-bottom: -1rem;
 }
+
+.pButtons {
+    align-items: center;
+    background: linear-gradient(269.49deg, #7755F9 10.41%, #02AAFD 111.89%), linear-gradient(270.52deg, #DB6C2F -10.09%, #7755F9 90.46%);
+    border: 0;
+    border-radius: 1.25rem;
+    color: #fff;
+    cursor: pointer;
+    height: 2.625rem;
+    width: 6.688rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: left;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: box-shadow,transform;
+    margin:auto;
+    margin-bottom: 2rem;
+
+}
+
+.pButtons:hover {
+    transform: translateY(-2px);
+  }
+
+  .pButtons:active {
+    transform: translateY(2px);
+  }
+
+  .btnContainer {
+    display: flex;
+  }
 
 @media screen and (min-width: 600px)  {
 
@@ -154,3 +188,4 @@ a:link {
         display: inline;
     }
 }
+
